display notification when event added through omni box. update events after add

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -42,7 +42,11 @@
       "all_frames": false
     }
   ],
+  "web_accessible_resources": [
+    "images/icon-128.png"
+  ],
   "permissions": [ "tabs",
+    "notifications",
     "https://www.google.com/calendar/feeds/",
     "https://accounts.google.com/o/oauth2/token"
   ],
