--- a/app/manifest.json
+++ b/app/manifest.json
@@ -10,9 +10,9 @@
     "default_locale": "en",
     "background": {
       "scripts": [
+        "scripts/client.js",
         "scripts/moment.min.js",
-        "scripts/background.js",
-        "scripts/client.js"
+        "scripts/background.js"
       ]
     },
   "browser_action": {
