--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,9 @@
 {
   "name": "chromecalendar",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "momentjs": "~2.1.0",
+    "underscore": "~1.5.1"
+  },
   "devDependencies": {}
 }
